<resources>
    <string name="app_name">TD6</string>
    <string name="repo">Chercher un repo</string>
    <string name="searchBtn">Lancer la recherche</string>
    <string name="searchTitle">Resultat de la recherche</string>
    <string name="userName">User name</string>
    <string name="ID">ID : </string>
    <string name="owner">Owner : </string>
    <string name="searchResultTitle">Résultat de la recherche</string>
    <string name="listRepo">La liste des repertoires</string>
    <string name="name">Owner</string>
    <string name="issues">Issues</string>
    <string name="number">200</string>
    <string name="commits">Commits</string>
    <string name="language">Language</string>
    <string name="java">JAVA</string>
</resources>