<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/repos_constraint_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- image Owner -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_image_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@mipmap/github"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/owner" />
                </androidx.cardview.widget.CardView>

                <GridLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:columnCount="1"
                    android:orientation="vertical"
                    android:padding="3dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@id/card_view_image_owner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    >

                    <TextView
                        android:id="@+id/owner_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="23sp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="5dp"
                        />

                    <TextView
                        android:id="@+id/repos_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/owner"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        />
                </GridLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/repos_constraint_lay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="1"
                    android:columnCount="3">

                    <!-- Issues -->
                    <GridLayout
                        android:id="@+id/gl_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:columnCount="1"
                        android:orientation="vertical"
                        android:padding="10dp"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/gl_2"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/issues"
                            android:textSize="23sp"
                            android:textColor="@color/purple_700"
                            android:fontFamily="sans-serif-condensed"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:id="@+id/issues"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/number"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textSize="17sp"
                            android:textAlignment="center"
                            />
                    </GridLayout>
                    <!-- Commits -->
                    <GridLayout
                        android:id="@+id/gl_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:columnCount="1"
                        android:orientation="vertical"
                        android:padding="5dp"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/gl_1"
                        app:layout_constraintEnd_toStartOf="@id/gl_3"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/commits"
                            android:textSize="23sp"
                            android:textColor="@color/purple_700"
                            android:fontFamily="sans-serif-condensed"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:id="@+id/commits"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/number"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textSize="17sp"
                            android:textAlignment="center"
                            />
                    </GridLayout>
                    <!-- Language -->
                    <GridLayout
                        android:id="@+id/gl_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:columnCount="1"
                        android:orientation="vertical"
                        android:padding="5dp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/gl_2"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textSize="23sp"
                            android:textColor="@color/purple_700"
                            android:fontFamily="sans-serif-condensed"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:id="@+id/language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/java"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textSize="17sp"
                            android:textAlignment="center"
                            />
                    </GridLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>